# unitfyi

./: .gitignore  README.md  SKILL.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml
skills/unit-tools/: SKILL.md
src/unitfyi/: __init__.py  api.py  cli.py  data.py  engine.py  mcp_server.py
tests/: test_api.py  test_cli.py  test_engine.py  test_mcp.py
