[project]
name = "unitfyi"
version = "0.1.3"
description = "Pure Python unit conversion engine — 200 units, 20 categories, Decimal precision. Zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "unit",
    "conversion",
    "metric",
    "imperial",
    "calculator",
    "measurement",
    "decimal",
    "temperature",
    "length",
    "weight",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["unitfyi[api,cli,mcp]"]

[project.scripts]
unitfyi = "unitfyi.cli:app"

[project.entry-points."mcp.servers"]
unitfyi = "unitfyi.mcp_server:mcp"

[project.urls]
Homepage = "https://unitfyi.com"
"Unit Converter" = "https://unitfyi.com/tools/converter/"
Documentation = "https://unitfyi.com/developers/"
Repository = "https://github.com/fyipedia/unitfyi"
Issues = "https://github.com/fyipedia/unitfyi/issues"
Changelog = "https://github.com/fyipedia/unitfyi/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unitfyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]  # __all__ grouped by category

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
